# MultithreadingHW5

./: CMakeLists.txt  main.cpp  readme.txt  threadmethods.cpp  threadmethods.h
documentation/: Описание программы.txt
